--- a/templates/apps.todo/login.html
+++ b/templates/apps.todo/login.html
@@ -1,4 +1,6 @@
 {% extends 'apps.todo/base.html' %}
+{% load static %}
+{% load widget_tweaks %}
 
 {% block extrahead %}
     <meta charset="utf-8">
@@ -11,29 +13,40 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
+        <link rel="stylesheet" href="{% static 'apps.todo/css/login.css' %}">
 {% endblock %}
 
 {% block content %}
-<div class="container w-50">
+{% if messages %}
+    {% for message in messages %}
+        <div class="alert alert-danger" role="alert">
+            {{message}}
+        </div>
+    {% endfor %}
+{% endif %}
+<form method="post">
+        {% csrf_token %}
+<div class="container">
     <div class="row">
         <div class="col mx-auto">
             <div class="card mt-5">
                 <div class="card-body">
                     <h2 class="text-center text-danger title mb-4">Login</h2>
                     <form>
-                        <div class="mb-3">
-                            <label for="email" class="form-label">Email</label>
-                            <input type="email" class="form-control" id="email" placeholder="Enter your email">
+                        <div class="mb-3 form-floating">
+                            {{ form.username|attr:'class:form-control'|attr:'type:email'|attr:'id:email'|attr:'placeholder:Enter your email' }}
+                            <label for="email">Email</label>
                         </div>
-                        <div class="mb-3">
-                            <label for="password" class="form-label">Password</label>
-                            <input type="password" class="form-control" id="password" placeholder="Enter your password">
+                        <div class="mb-3 form-floating">
+                            {{ form.username|attr:'class:form-control'|attr:'type:password'|attr:'id:password'|attr:'placeholder:Enter your password' }}
+                            <label for="password">Password</label>
                         </div>
-                        <button type="submit" class="btn btn-success">Login</button>
+                        <button type="submit" class="btn btn-success position-absolute bottom-0 start-50 translate-middle-x">Login</button>
                     </form>
                 </div>
             </div>
         </div>
     </div>
 </div>
+</form>
 {% endblock %}
