--- a/templates/apps.todo/login.html
+++ b/templates/apps.todo/login.html
@@ -33,13 +33,11 @@
                     <form method="post">
                         {% csrf_token %}
                         <div class="mb-3 form-floating">
-                            {{ form.username|attr:'class:form-control'|attr:'type:email'|attr:'id:email'
-                            |attr:'placeholder:Enter your email' }}
+                            {{ form.username|attr:'class:form-control'|attr:'type:email'|attr:'id:email'|attr:'placeholder:Enter your email' }}
                             <label for="email">Email</label>
                         </div>
                         <div class="mb-3 form-floating">
-                            {{ form.password|attr:'class:form-control'|attr:'type:password'|attr:'id:password'
-                            |attr:'placeholder:Enter your password' }}
+                            {{ form.password|attr:'class:form-control'|attr:'type:password'|attr:'id:password'|attr:'placeholder:Enter your password' }}
                             <label for="password">Password</label>
                         </div>
                         <br>
