--- a/templates/apps.todo/signup.html
+++ b/templates/apps.todo/signup.html
@@ -23,18 +23,15 @@
                     <form method="post">
                         {% csrf_token %}
                         <div class="mb-3">
-                            {{ form.email|attr:'class:form-control'|attr:'type:email'|attr:'id:email'
-                            |attr:'placeholder:Enter your email' }}
+                            {{ form.email|attr:'class:form-control'|attr:'type:email'|attr:'id:email'|attr:'placeholder:Enter your email' }}
                             <label for="email" class="form-label">Email</label>
                         </div>
                         <div class="mb-3">
-                            {{ form.password1|attr:'class:form-control'|attr:'type:password'|attr:'id:password1'
-                            |attr:'placeholder:Enter your password' }}
+                            {{ form.password1|attr:'class:form-control'|attr:'type:password'|attr:'id:password1'|attr:'placeholder:Enter your password' }}
                             <label for="password1" class="form-label">Password</label>
                         </div>
                         <div class="mb-3">
-                            {{ form.password2|attr:'class:form-control'|attr:'type:password'|attr:'id:password2'
-                            |attr:'placeholder:Confirm your email' }}
+                            {{ form.password2|attr:'class:form-control'|attr:'type:password'|attr:'id:password2'|attr:'placeholder:Confirm your email' }}
                             <label for="password2" class="form-label">Password confirmation</label>
                         </div>
                         <button type="submit" class="btn btn-success mb-3">Sign Up</button>
