personal create/delete task added

--- a/apps/todo/static/apps.todo/css/home.css
+++ b/apps/todo/static/apps.todo/css/home.css
@@ -2,6 +2,10 @@
     list-style: none;
 }
 
+.no-decoration{
+    text-decoration: none;
+}
+
 .title{
     font-family: 'Permanent Marker', cursive;
 }
