--- a/templates/apps.todo/home.html
+++ b/templates/apps.todo/home.html
@@ -25,7 +25,7 @@
                   {% if user.is_authenticated %}
                     <li><a class="btn btn-outline-success" href="{% url 'logout' %}">Log out</a></li>
                   {% else %}
-                    <li><a class="btn btn-outline-success">Sign up</a></li>
+                    <li><a class="btn btn-outline-success" href="{% url 'signup' %}">Sign up</a></li>
                     <li><a class="btn btn-outline-success" href="{% url 'login' %}">Log In</a></li>
                   {% endif %}
               </ul>
@@ -35,58 +35,30 @@
           <h1 class="text-nowrap p-1 text-danger title text-center">
             To Do List
           </h1>
+            {% if user.is_authenticated %}
           <h2>
-            +
+              <a href="{% url 'create-task' %}" class="no-decoration">+</a>
           </h2>
             <div class="row">
                 <div class="col">
                     <div class="overflow-auto" style="height: 200px">
-                        <ul class="list-group">
-                            <li class="list-group-item">
-                                <a href="#" class="link-secondary link-underline-opacity-0">Item 1</a>
-                                <a href="#"><i class="bi bi-pencil p-1 position-absolute text-success"></i></a>
-                                <a href="#"><i class="bi bi-trash p-1 text-danger"></i></a>
-                            </li>
-                            <li class="list-group-item">
-                                <a href="#" class="link-secondary link-underline-opacity-0">Item 1</a>
-                                <a href="#"><i class="bi bi-pencil p-1 position-absolute text-success"></i></a>
-                                <a href="#"><i class="bi bi-trash p-1 text-danger"></i></a>
-                            </li>
-                            <li class="list-group-item">
-                                <a href="#" class="link-secondary link-underline-opacity-0">Item 1</a>
-                                <a href="#"><i class="bi bi-pencil p-1 position-absolute text-success"></i></a>
-                                <a href="#"><i class="bi bi-trash p-1 text-danger"></i></a>
-                            </li>
-                            <li class="list-group-item">
-                                <a href="#" class="link-secondary link-underline-opacity-0">Item 1</a>
-                                <a href="#"><i class="bi bi-pencil p-1 position-absolute text-success"></i></a>
-                                <a href="#"><i class="bi bi-trash p-1 text-danger"></i></a>
-                            </li>
-                            <li class="list-group-item">
-                                <a href="#" class="link-secondary link-underline-opacity-0">Item 1</a>
-                                <a href="#"><i class="bi bi-pencil p-1 position-absolute text-success"></i></a>
-                                <a href="#"><i class="bi bi-trash p-1 text-danger"></i></a>
-                            </li>
-                            <li class="list-group-item">
-                                <a href="#" class="link-secondary link-underline-opacity-0">Item 1</a>
-                                <a href="#"><i class="bi bi-pencil p-1 position-absolute text-success"></i></a>
-                                <a href="#"><i class="bi bi-trash p-1 text-danger"></i></a>
-                            </li>
-                            <li class="list-group-item">
-                                <a href="#" class="link-secondary link-underline-opacity-0">Item 1</a>
-                                <a href="#"><i class="bi bi-pencil p-1 position-absolute text-success"></i></a>
-                                <a href="#"><i class="bi bi-trash p-1 text-danger"></i></a>
-                            </li>
-                            <li class="list-group-item">
-                                <a href="#" class="link-secondary link-underline-opacity-0">Item 1</a>
-                                <a href="#"><i class="bi bi-pencil p-1 position-absolute text-success"></i></a>
-                                <a href="#"><i class="bi bi-trash p-1 text-danger"></i></a>
-                            </li>
-                        </ul>
+                        {% if tasks %}
+                            <ul class="list-group">
+		                    {% for task in tasks %}
+			                    <li class="list-group-item">
+                                    <a href="#" class="link-secondary link-underline-opacity-0">
+                                        {% if task.completed %} <del>{{task}}</del> {% else %} {{task}} {% endif %}
+                                    </a>
+                                    <a href="#"><i class="bi bi-pencil p-1 position-absolute text-success"></i></a>
+                                    <a href="{% url 'delete-task' task.id %}"><i class="bi bi-trash p-1 text-danger"></i></a>
+		                        </li>
+		                    {% endfor %}
+                            </ul>
+	                    {% endif %}
                     </div>
                 </div>
             </div>
+            {% endif %}
         </div>
-        <div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 {% endblock %}
