debug front-end

--- a/templates/apps.todo/create-task.html
+++ b/templates/apps.todo/create-task.html
@@ -54,8 +54,8 @@
                                 {{ form.completed|attr:'id:completed'}}
                             </div>
                             <br>
-                            <button type="submit" class="btn btn-success position-absolute bottom-0
-                            end-100 translate-middle-x">Create</button>
+                            <button type="submit" class="btn-create btn btn-success position-absolute bottom-0
+                            translate-middle-x">Create</button>
                             <a class="btn btn-danger position-absolute bottom-0
                             end-0 translate-middle-x" href="{% url 'home' %}">Cancel</a>
                         </form>
